# InkVision

./: CMakeLists.txt  ChartWidget.cpp  ChartWidget.h  ChartWidget.ui  Common.cpp  Common.h  CustomizedWidget.cpp  CustomizedWidget.h  CustomizedWidget.ui  DebugWidget.cpp  DebugWidget.h  DebugWidget.ui  DrawBoard.cpp  DrawBoard.h  ExpressionWidget.cpp  ExpressionWidget.h  ExpressionWidget.ui  MyMarh.cpp  MyMath.h  NavButton.cpp  NavButton.h  RealtimeWidget.cpp  RealtimeWidget.h  RealtimeWidget.ui  YOLO_Detector.cpp  YOLO_Detector.h  basic.css  colorChoiceWidget.cpp  colorChoiceWidget.h  colorChoiceWidget.ui  debugwindow.cpp  debugwindow.h  debugwindow.ui  expr.css  main.cpp  mainwindow.cpp  mainwindow.ui  readme.md  resources.qrc  src.qrc
Calculator/: BigDecimal.cpp  BigDecimal.h  ExpressionEvaluator.cpp  ExpressionEvaluator.h  ExpressionValidator.cpp  ExpressionValidator.h  OperatorTable.cpp  OperatorTable.h  RpnEvaluator.cpp  RpnEvaluator.h  ShuntingYard.cpp  ShuntingYard.h  Token.h  Tokenizer.cpp  Tokenizer.h  Validator.cpp  Validator.h
styles/: style.css
